# gmlib

./: CMakeLists.txt
core/: CMakeLists.txt  debug.cpp  debug.d  debug.hpp  image.cpp  image.d  image.hpp  intersect.cpp  intersect.hpp  maths.d  primitives.hpp  ray.hpp  rgb8.hpp  rnd.cpp  rnd.hpp  vec4.hpp
